<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="general_category"
        app:title="@string/general_category">

        <ListPreference
            app:defaultValue="@string/follow_system_value"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_baseline_palette_24"
            app:key="theme_key"
            app:title="@string/theme_title" />

        <Preference
            app:icon="@drawable/ic_github"
            app:key="github_key"
            app:title="@string/github_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_data" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>